--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==2.6.0+cpu
-torchaudio==2.6.0+cpu
-transformers==4.45.1
+torch==2.5.0+cu121
+torchaudio==2.5.0+cu121
+transformers==4.44.0
 aiogram==3.17.0
 ffmpeg-python==0.2.0
 accelerate==0.33.0
---index-url https://download.pytorch.org/whl/cpu
+--index-url https://download.pytorch.org/whl/cu121
